--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -3,7 +3,6 @@
 
 	<head>
 		<title>The Age of Flowers</title>
-		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 
@@ -24,8 +23,9 @@
 			<section class="quote" id="grief">
 				<p>"In the grief, all boundaries of flesh were eliminated. Now, in the pain, could Elaine see the part of her heart that could only be experienced in the depths of love and courage."</p>
 			</section>
+		<section id="two_column" class="clearfix">
 
-		<section class="article">
+		<article id="left">
 
 			<section id="book">
 				<h1>The Age of Flowers</h1>
@@ -61,9 +61,70 @@
 
 				<p>In life, I have been found to be a lush for love. I have given love whole-heartedly and without reservation, making the conscious decision to not control or manipulate the people, especially in relationships. To the best of my ability and what I knew at the time, I set out to love open handed. Relationships start with beautiful people, and have good intentions. As humans, we get caught up in wanting to be right and not what is best. I got so focused in wanting to make it work, to the point that I was willing to make sacrifices to love and support the beautiful human that was in my hand to love. From this, I have found inspiration to write and share my passion. I have learned through life and hope that my story can give courage love life in a whole new way.</p>
 			</section>
-		</section>		
+		</article>	
 
-	<footer>&copy; Age of Flowers
+		<asided id="right">
+			<h2>A gift of heart</h2>
+
+			<p>Sifted by the sands of time,
+			There is no chest to lay my head on..
+			No Love to find me.</p> 
+
+			<p>All love has been is one sided.
+			Only words that glisten in the sun.
+			I have no hope of yet a true found love.</p>
+
+			<p>Your heart is deep and your love is vast,
+			You do not know how to share it yet.
+			I have called to your heart.
+			When will you answer my call, kind sir?</p>
+
+			<p>Tears ran down his cheek, 
+			His voice trembling, 
+			"I did not mean to be a jerk"
+			Love shown through the tears.</p> 
+
+			<p>Her heart, she gave him months ago.  
+			Not a word was whispered of such love till questioned.</p> 
+			<p>The package came on a Thursday. 
+			As he set it down, he realized what it was. 
+			He opened it, and read of undying love. 
+			"This is how I fell in love with you"</p>
+
+			<p>Every page was her heart engrave with such joy. 
+			She broke down every wall with her words.
+			The tears flowed like rivers rage. 
+			What everyone dare desire, he held in his hands.
+			Her untainted heart lie in his arms.</p>
+
+			<p>Tears flowed as his heart gave way. 
+			He could not understand such an free gift of love.</p>
+
+			<br>
+
+			<p>She lay there, with tears in her eyes.
+			"Its the end... Its over."
+			These words sank deep in her spirit.
+			Months had gone without word from him. 
+			He chose neglect to aid in the heart ache.
+			Left alone, she had no choice. 
+			All her love lay in this book of her love story.
+			All that was left was pain.</p> 
+
+			<p>"To rip life from my heart, all is lost."
+			On those pages where her life.
+			Instead of burying it, she sent it to her love.
+			If hope is dead, then he will at least know of the love she had.</p>
+
+		</aside>
+
+
+
+		</div>	
+
+
+
+	<footer>
 
 	</footer>
 
